<resources>
    <string name="app_name">SajraProjekat</string>
    <string name="slogan">Fast, Fresh, Instant</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="_38761177803">+38761177803</string>
    <string name="password">Password</string>
    <string name="_1234">1234</string>
    <string name="name">Name</string>
    <string name="dina">Dina</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tracking_order">TrackingOrder</string>
</resources>
